tests/baselines/reference/tsxUnionElementType6.errors.txt
tests/cases/conformance/jsx/file.tsx(18,10): error TS2559: Type '{ x: true; }' has no properties in common with type 'IntrinsicAttributes'.
tests/cases/conformance/jsx/file.tsx(19,27): error TS2326: Types of property 'x' are incompatible.
  Type 'string' is not assignable to type 'boolean'.
tests/cases/conformance/jsx/file.tsx(20,10): error TS2610: The attributes provided to 'SFC2AndEmptyComp' are not assignable to type '{ x: boolean; }'
  Property 'x' is missing in type '{}'.
tests/cases/conformance/jsx/file.tsx(21,10): error TS2610: The attributes provided to 'SFC2AndEmptyComp' are not assignable to type '{ x: boolean; }'
  Property 'x' is missing in type '{ data-prop: true; }'.


==== tests/cases/conformance/jsx/file.tsx (4 errors) ====
    import React = require('react');
    
    function EmptySFC1() {
        return <div>Hi</div>
    }
    
    function EmptySFC2() {
        return <div>Hello</div>
    }
    
    function SFC2(prop: { x: boolean }) {
        return <h1>World</h1>;
    }
    
    var EmptySFCComp = EmptySFC1 || EmptySFC2;
    var SFC2AndEmptyComp = SFC2 || EmptySFC1;
    // Error
    let a = <EmptySFCComp x />;
             ~~~~~~~~~~~~
!!! error TS2559: Type '{ x: true; }' has no properties in common with type 'IntrinsicAttributes'.
    let b = <SFC2AndEmptyComp x="hi" />;
                              ~~~~~~
!!! error TS2326: Types of property 'x' are incompatible.
!!! error TS2326:   Type 'string' is not assignable to type 'boolean'.
    let c = <SFC2AndEmptyComp />;
             ~~~~~~~~~~~~~~~~
!!! error TS2610: The attributes provided to 'SFC2AndEmptyComp' are not assignable to type '{ x: boolean; }'
!!! error TS2610:   Property 'x' is missing in type '{}'.
    let d = <SFC2AndEmptyComp data-prop />;
             ~~~~~~~~~~~~~~~~
!!! error TS2610: The attributes provided to 'SFC2AndEmptyComp' are not assignable to type '{ x: boolean; }'
!!! error TS2610:   Property 'x' is missing in type '{ data-prop: true; }'.
    
    